remove unnecessary mounting of local folder

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,7 +28,7 @@
     "source=${localWorkspaceFolder}/.bash_history,target=/home/vscode/.bash_history,type=bind",
     "source=${localWorkspaceFolder}/.bashrc,target=/home/vscode/.bashrc,type=bind",
     // "source=${localEnv:HOME}${localEnv:USERPROFILE}/,target=/home/vscode/localusr,type=bind"                           //mount local home in a folder in the container user's home
-    "source=${localEnv:HOME}${localEnv:USERPROFILE}/,target=/home/vscode/${localWorkspaceFolderBasename},type=bind",                                     //mount local home in the container user's home   NB: Local .bashrc is in use
+    // "source=${localEnv:HOME}${localEnv:USERPROFILE}/,target=/home/vscode/${localWorkspaceFolderBasename},type=bind",                                     //mount local home in the container user's home   NB: Local .bashrc is in use
     "type=bind,source=/dev/input,target=/dev/input"                                                                       // bind usb devices i.e., joystick
   ],
   "customizations": {
