Updated dev cont configs (#1)
- added rosdep update in dev container
- fixed sourcing and path
Changes to be committed:
	modified:   .devcontainer/devcontainer.json
	new file:   .devcontainer/on-create-command.sh
	new file:   .devcontainer/post-create-command.sh
	new file:   .devcontainer/update-content-command.sh
	modified:   README.md

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,11 +24,14 @@
   ],
   "workspaceMount": "source=${localWorkspaceFolder},target=/${localWorkspaceFolderBasename},type=bind",
   "workspaceFolder": "/${localWorkspaceFolderBasename}",
+  "onCreateCommand": ".devcontainer/on-create-command.sh",
+  "updateContentCommand": ".devcontainer/update-content-command.sh",
+  "postCreateCommand": ".devcontainer/post-create-command.sh",
   "mounts": [
-    "source=${localWorkspaceFolder}/.bash_history,target=/home/vscode/.bash_history,type=bind",
-    "source=${localWorkspaceFolder}/.bashrc,target=/home/vscode/.bashrc,type=bind",
+    // "source=${localWorkspaceFolder}/.bash_history,target=/home/vscode/.bash_history,type=bind",
+    // "source=${localWorkspaceFolder}/.bashrc,target=/home/vscode/.bashrc,type=bind",                                           // NB: workspace's .bashrc file is in use
     // "source=${localEnv:HOME}${localEnv:USERPROFILE}/,target=/home/vscode/localusr,type=bind"                           //mount local home in a folder in the container user's home
-    // "source=${localEnv:HOME}${localEnv:USERPROFILE}/,target=/home/vscode/${localWorkspaceFolderBasename},type=bind",                                     //mount local home in the container user's home   NB: Local .bashrc is in use
+    // "source=${localEnv:HOME}${localEnv:USERPROFILE}/,target=/home/vscode/,type=bind",                                     //mount local home in the container user's home   NB: Local .bashrc is in use
     "type=bind,source=/dev/input,target=/dev/input"                                                                       // bind usb devices i.e., joystick
   ],
   "customizations": {
@@ -39,7 +42,7 @@
         "twxs.cmake",
         "ms-vscode.cpptools",
         "ms-vscode.cpptools-extension-pack",
-        "franneck94.c-cpp-runner"
+        "franneck94.c-cpp-runner",
       ]
     }
   }
