re-add apt update && apt upgrade to get latest updates to ros2 packages

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -60,6 +60,9 @@ USER $USERNAME
 # Add user to video group to allow access to webcam
 RUN sudo usermod --append --groups video $USERNAME
 
+# Update all packages
+RUN sudo apt update & sudo apt upgrade -y
+
 ## install python packages
 
 # Rosdep update
