--- a/.gitmodules
+++ b/.gitmodules
@@ -15,3 +15,6 @@
 [submodule "src/BehaviorTree.ROS2"]
 	path = src/BehaviorTree.ROS2
 	url = git@github.com:BehaviorTree/BehaviorTree.ROS2.git
+[submodule "src/ros2_behavior_tree_example"]
+	path = src/ros2_behavior_tree_example
+	url = git@github.com:polymathrobotics/ros2_behavior_tree_example.git
